leo perfil linkedin

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -471,7 +471,7 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/fabiyugar.png"  />
                         </div>
-                        <p class="text-muted">Dev Team</p>
+                        <p class="text-muted">Analista de Negócios / Product Owner</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/fabicanedo/" target="_blank">
@@ -491,7 +491,7 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/gabisutto.png" />
                         </div>
-                        <p class="text-muted">Dev Team</p>
+                        <p class="text-muted">Desenvolvedor Front-end / UI Designer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/gabriel-sutto-a0359817a/" target="_blank">
@@ -511,10 +511,10 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/leoitalo.png" />
                         </div>
-                        <p class="text-muted">Dev Team</p>
+                        <p class="text-muted">Desenvolvedor Back-end</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
-                                <a href="https://www.linkedin.com/" target="_blank">
+                                <a href="https://www.linkedin.com/in/leonardo-italo-56401a198/" target="_blank">
                                     <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
                                 </a>
                             </li>
@@ -531,7 +531,7 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/nathymedina.png" />
                         </div>
-                        <p class="text-muted">Dev Team</p>
+                        <p class="text-muted">Scrum Master / Product Owner</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/nat%C3%A1lia-m-b86a94165/" target="_blank">
@@ -551,7 +551,7 @@
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/yulima.png" />
                         </div>
-                        <p class="text-muted">Dev Team</p>
+                        <p class="text-muted">Desenvolvedor Fullstack / UX Designer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/yuri-uliam-de-lima-423586184/" target="_blank">
