testes site Nosso time

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -435,43 +435,21 @@
     </div>
 
 <!-- Nossa equipe -->
-<!-- Nossa
-<div class="row">
-    <div class="col-sm-4">
-      <div class="team-member">
-        <img class="mx-auto rounded-circle" src="OnePage/img/bianca.jpg" style="height:190px; width:190px" alt="">
-        <h4>Bianca Barranco</h4>
-        <p class="text-muted">Dev Team</p>
-        <ul class="list-inline social-buttons">
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/bianca-barranco-44811b146" target="_blank">
-              <img class="mx-auto rounded-circle" src="OnePage/img/linkedin.png" style="height:30px; width:30px">
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://github.com/bibarranco" target="_blank">
-              <img class="mx-auto rounded-circle" src="OnePage/img/github.jpg" style="height:30px; width:50px">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    equipe -->
+
     <div class="section section-our-clients-freebie" id="sobre">
         <div class="container">
             <div class="title-area">
                 <h5 class="subtitle text-gray">Conheça a</h5>
                 <h2>Nossa equipe</h2>
                 <div class="separator separator-danger">✻</div>
-            </div>
-
+            </div>        
             <ul class="nav nav-text" role="tablist">
                 <li class="active">
                     <a href="#testimonial1" role="tab" data-toggle="tab">
                         <div class="image-clients">
                             <img alt="..." class="img-circle" src="img/faces/fabiyugar.png"  />
                         </div>
-                        <p class="text-muted">Analista de Negócios / Product Owner</p>
+                        <p class="text-muted">Analista de Negócios / Product Manager </p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/fabicanedo/" target="_blank">
