--- a/Site/MeuSite/public/dashboard.html
+++ b/Site/MeuSite/public/dashboard.html
@@ -113,7 +113,7 @@
 </body>
 
 </html>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   const ctx = document.getElementById('exampleChart').getContext('2d');
   const months = [
     'Janeiro',
@@ -241,10 +241,10 @@
     }
   }
 
-</script>
+</script> -->
 
 
 
-<script src="js/autenticacao_fb.js"></script>
+<script src="js/graficos.js"></script>
 <script async defer crossorigin="anonymous"
   src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v4.0&appId=1020754554935134&autoLogAppEvents=1"></script>
