--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -12,6 +12,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/gaia.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/sobrescricao.css">
 
     <!--     Fonts and icons     -->
 
