--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -454,7 +454,9 @@
                             <img alt="..." class="img-circle" src="img/faces/fabiyugar.png"  />
                         </div>
                         <p class="text-muted">Fabíola Canedo</p>
-                        <ul class="list-inline social-buttons">
+                        <p class="text-muted">Analista de Negócios/</p>
+                        <p class="text-muted">Product Manager</p>
+                        <ul class="list-inline">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/fabicanedo/" target="_blank">
                                     <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
@@ -474,7 +476,9 @@
                             <img alt="..." class="img-circle" src="img/faces/gabisutto.png" />
                         </div>
                         <p class="text-muted">Gabriel Sutto</p>
-                        <ul class="list-inline social-buttons">
+                        <p class="text-muted">Desenvolvedor Front-end/</p>
+                        <p class="text-muted">UI Designer</p>
+                        <ul class="list-inline ">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/gabriel-sutto-a0359817a/" target="_blank">
                                     <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
@@ -494,7 +498,9 @@
                             <img alt="..." class="img-circle" src="img/faces/leoitalo.png" />
                         </div>
                         <p class="text-muted">Leonardo Italo</p>
-                        <ul class="list-inline social-buttons">
+                        <p class="text-muted">Desenvolvedor </p>
+                        <p class="text-muted"> Back-end </p>
+                        <ul class="list-inline">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/leonardo-italo-56401a198/" target="_blank">
                                     <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
@@ -515,7 +521,9 @@
                             <img alt="..." class="img-circle" src="img/faces/nathymedina.png" />
                         </div>
                         <p class="text-muted">Natália Medina</p>
-                        <ul class="list-inline social-buttons">
+                        <p class="text-muted"> Scrum Master/</p>
+                        <p class="text-muted"> Product Owner</p>
+                        <ul class="list-inline ">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/nat%C3%A1lia-m-b86a94165/" target="_blank">
                                     <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
@@ -535,7 +543,9 @@
                             <img alt="..." class="img-circle" src="img/faces/yulima.png" />
                         </div>
                         <p class="text-muted">Yuri Lima</p>
-                        <ul class="list-inline social-buttons">
+                        <p class="text-muted">Desenvolvedor Fullstack/</p>
+                        <p class="text-muted">UX Designer</p>
+                        <ul class="list-inline ">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/yuri-uliam-de-lima-423586184/" target="_blank">
                                     <img class="mx-auto rounded-circle" src="img/linkedin.png" style="height:30px; width:30px">
@@ -550,34 +560,6 @@
                     </a>
                 </li>
             </ul>
-               
-            <div class="tab-content">
-                <div class="tab-pane active" id="testimonial1">
-                    <p class="description">
-                        Analista de Negócios / Product Manager
-                    </p>
-                </div>
-                <div class="tab-pane" id="testimonial2">
-                    <p class="description">
-                        Desenvolvedor Front-end / UI Designer
-                    </p>
-                </div>
-                <div class="tab-pane" id="testimonial3">
-                    <p class="description">
-                        Desenvolvedor Back-end
-                    </p>
-                </div>
-                <div class="tab-pane" id="testimonial4">
-                    <p class="description">
-                        Scrum Master / Product Owner
-                    </p>
-                </div>
-                <div class="tab-pane" id="testimonial5">
-                    <p class="description">
-                        Desenvolvedor Fullstack / UX Designer
-                    </p>
-                </div>
-
             </div>
         </div>
     </div>
