Site toques finais

--- a/Site/MeuSite/public/index.html
+++ b/Site/MeuSite/public/index.html
@@ -105,7 +105,7 @@
                                     </div>
                                     <div class="modal-footer; modal-botao">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                                        <button type="button" class="btn btn-danger btn-fill" data-toggle="modal" data-target="#modalCadastro">Cadastrar-se</button>
+                                        <button type="button" class="btn btn-danger btn-fill" data-toggle="modal" onclick="window.location.replace('./tela-de-login.html')">Cadastrar-se</button>
                                         <button type="button" class="btn btn-danger btn-fill" id="btn_login" onclick="validacao()">Login</button><br>
 
                                        
