--- a/code/new-dash-prototype/src/index.html
+++ b/code/new-dash-prototype/src/index.html
@@ -384,7 +384,7 @@
                   frameborder="0" scrolling="no" width="100%" height="auto" class="overflow-hidden" onload="resizeIframe(this)"></iframe>
               </div>
             </div>
-            <div class="container-fluid p-5">
+            <!-- <div class="container-fluid p-5">
                 <div class="row">
                     <div class="form-group col-md-12">
                         <h2>Pro Sidebar</h2>
@@ -478,7 +478,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </main>
         <!-- page-content" -->
     </div>
