--- a/code/new-dash-prototype/src/index.html
+++ b/code/new-dash-prototype/src/index.html
@@ -73,7 +73,7 @@
                 <div class=" sidebar-item sidebar-menu">
                     <ul>
                         <li class="header-menu">
-                            <span>General</span>
+                            <span>Geral</span>
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
@@ -84,7 +84,7 @@
                                 <ul>
                                     <li>
                                         <a id="toggle-detalhes">Detalhes
-                                            <span class="badge badge-pill badge-success">Pro</span>
+                                            <!-- <span class="badge badge-pill badge-success">Pro</span> -->
                                         </a>
                                     </li>
                                     <li>
@@ -92,7 +92,7 @@
                                     </li>
                                     <li>
                                       <a id="toggle-gpu">GPU
-                                        <span class="badge badge-pill badge-warning">New</span>
+                                        <!-- <span class="badge badge-pill badge-warning">New</span> -->
                                       </a>
                                     </li>
                                     <li>
@@ -104,7 +104,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="sidebar-dropdown">
+                        <!-- <li class="sidebar-dropdown">
                             <a href="#">
                                 <i class="fa fa-shopping-cart"></i>
                                 <span class="menu-text">E-commerce</span>
@@ -210,7 +210,7 @@
                                 <i class="fa fa-folder"></i>
                                 <span class="menu-text">Examples</span>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <!-- sidebar-menu  -->
